--- a/src/pages/SunnyLandingpage/SunnyLandingpage.css
+++ b/src/pages/SunnyLandingpage/SunnyLandingpage.css
@@ -19,3 +19,6 @@
   /* background colors */
   --bgcolorss-blue: #3ebfff;
 }
+.sunny-container {
+  width: 100vw;
+}
