--- a/src/pages/SunnyLandingpage/components/BrandFeatures/BrandFeatures.css
+++ b/src/pages/SunnyLandingpage/components/BrandFeatures/BrandFeatures.css
@@ -1,7 +1,7 @@
 .brandfeature-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
-  flex-direction: row ;
+  flex-direction: row;
   flex-wrap: wrap;
   background-color: #fffbf8;
 }
@@ -56,7 +56,7 @@ div.btn-bottom {
   bottom: 6px;
   z-index: 1;
 }
-div.btn-bottom.bottom-pink{
+div.btn-bottom.bottom-pink {
   border-color: var(--colorss-soft-red);
 }
 .brand-item-mixed {
@@ -83,6 +83,7 @@ div.btn-bottom.bottom-pink{
 @media only screen and (min-width: 426px) {
   picture.image-header img {
     width: 100vw;
+    height: 100%;
     min-width: 1366px;
     position: relative;
     bottom: 350px;
